5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_2896.log
== TEST (2019-04-14 20:46:35) 
-- CODE:
var = input(Q"digite seu nome: ")
escreva(Q"Dayana")
print(var)
-- ERROR:
File "XXXX", line 1
    var = input(Q"digite seu nome: ")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:46:37) 
-- CODE:
var = input(Q"digite seu nome: ")
escreva(Q"Dayana")
print(var)
-- ERROR:
File "XXXX", line 1
    var = input(Q"digite seu nome: ")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:47:31) 
-- CODE:
var = input(Q"Digite o nome: ")
print(var)
-- ERROR:
File "XXXX", line 1
    var = input(Q"Digite o nome: ")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:47:36) 
-- CODE:
var = input(Q"Digite o nome: ")
print(var)
-- EXECUTION TIME:
0.160447
-- ERROR:
  File "/home/codebench/codes/1577/2896/main.py", line 1
    var = input(Q"Digite o nome: ")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:49:50) 
-- CODE:
var = input("Digite o nome: ")
print("Voce Digitou.var")
-- OUTPUT:
Voce Digitou.var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:50:24) 
-- CODE:
var = input("Digite o nome: ")
print("Voce Digitou.var")
-- EXECUTION TIME:
0.24444
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou.var
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou.var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:50:41) 
-- CODE:
var = input(Q"Digite o nome: ")
print(Q"Voce Digitou.var")
-- ERROR:
File "XXXX", line 1
    var = input(Q"Digite o nome: ")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:50:58) 
-- CODE:
var = input(Q"Digite o nome: ")
print(Q"Voce Digitou,var")
-- ERROR:
File "XXXX", line 1
    var = input(Q"Digite o nome: ")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:51:36) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou, var")
-- OUTPUT:
Voce Digitou, var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:06) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou," var)
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou," var)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:27) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou," var )
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou," var )
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:38) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou," "var )
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou," "var )
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:42) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou," "var )
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou," "var )
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:53:09) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var )
-- OUTPUT:
Voce Digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:53:19) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var )
-- EXECUTION TIME:
0.137527
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:53:50) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var )
-- OUTPUT:
Voce Digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:53:59) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var )
-- EXECUTION TIME:
0.217153
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:55:33) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var)
print(var)
-- OUTPUT:
Voce Digitou Ada_Lovelace
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:55:51) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var)
print(var)
-- EXECUTION TIME:
0.176483
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou Ada_Lovelace
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou Teste
Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:56:13) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var)
print(var)
-- OUTPUT:
Voce Digitou Ada_Lovelace
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:56:45) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var)
-- OUTPUT:
Voce Digitou Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:56:50) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou", var)
-- EXECUTION TIME:
0.139359
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:57:05) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", var)
-- EXECUTION TIME:
0.189969
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou  Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou  Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:57:08) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", var)
-- OUTPUT:
Voce Digitou  Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:57:11) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", var)
-- EXECUTION TIME:
0.186533
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou  Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou  Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:57:24) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", "var)
-- EXECUTION TIME:
0.239597
-- ERROR:
  File "/home/codebench/codes/1577/2896/main.py", line 2
    print(" Voce Digitou ", "var)
                                ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:57:26) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", "var)
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou ", "var)
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:57:29) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ", "var)
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou ", "var)
                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:57:38) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ",var)
-- OUTPUT:
Voce Digitou  Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:57:41) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ",var)
-- EXECUTION TIME:
0.161378
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou  Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou  Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:58:36) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ",var)
escrever("muitoobrigada")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    escrever("muitoobrigada")
NameError: name 'escrever' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:59:02) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ",var)
var("muitoobrigada")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var("muitoobrigada")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:59:58) 
-- CODE:
var = input("Digite o nome: ")
print(" Voce Digitou ",var)
var 1("muitoobrigada")
print("muito obrigada", var)
-- ERROR:
File "XXXX", line 3
    var 1("muitoobrigada")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:00:15) 
-- CODE:
var 0 = input("Digite o nome: ")
print(" Voce Digitou ",var)
var 1("muitoobrigada")
print("muito obrigada", var)
-- ERROR:
File "XXXX", line 1
    var 0 = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:00:27) 
-- CODE:
var 0 = input("Digite o nome: ")
print(" Voce Digitou ",var0)
var 1("muitoobrigada")
print("muito obrigada", var1)
-- ERROR:
File "XXXX", line 1
    var 0 = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:00:46) 
-- CODE:
var  = input("Digite o nome: ")
print(" Voce Digitou ",var)
-- OUTPUT:
Voce Digitou  Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:00:50) 
-- CODE:
var  = input("Digite o nome: ")
print(" Voce Digitou ",var)
-- EXECUTION TIME:
0.18981
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Voce Digitou  Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Voce Digitou  Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:01:33) 
-- CODE:
var  = input("Digite o nome: ")
print(float" Voce Digitou ",var)
-- ERROR:
File "XXXX", line 2
    print(float" Voce Digitou ",var)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:01:36) 
-- CODE:
var  = input("Digite o nome: ")
print(float" Voce Digitou ",var)
-- EXECUTION TIME:
0.272629
-- ERROR:
  File "/home/codebench/codes/1577/2896/main.py", line 2
    print(float" Voce Digitou ",var)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:01:51) 
-- CODE:
var  = input("Digite o nome: ")
print( "Voce Digitou ",var)
-- OUTPUT:
Voce Digitou  Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:02:15) 
-- CODE:
var  = input("Digite o nome: ")
print( "Voce Digitou ",var) Python
-- EXECUTION TIME:
0.160801
-- ERROR:
  File "/home/codebench/codes/1577/2896/main.py", line 2
    print( "Voce Digitou ",var) Python
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:02:16) 
-- CODE:
var  = input("Digite o nome: ")
print( "Voce Digitou ",var) Python
-- ERROR:
File "XXXX", line 2
    print( "Voce Digitou ",var) Python
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:02:16) 
-- CODE:
var  = input("Digite o nome: ")
print( "Voce Digitou ",var) Python
-- ERROR:
File "XXXX", line 2
    print( "Voce Digitou ",var) Python
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:02) 
-- CODE:
var  = input("Digite o nome: ")
print(" Voce Digitou ",var.)
-- EXECUTION TIME:
0.143484
-- ERROR:
  File "/home/codebench/codes/1577/2896/main.py", line 2
    print(" Voce Digitou ",var.)
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:03:03) 
-- CODE:
var  = input("Digite o nome: ")
print(" Voce Digitou ",var.)
-- ERROR:
File "XXXX", line 2
    print(" Voce Digitou ",var.)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:03:38) 
-- CODE:
var  = input"Digite o nome: "
print" Voce Digitou ",var
-- ERROR:
File "XXXX", line 1
    var  = input"Digite o nome: "
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:03:51) 
-- CODE:
var  = input "Digite o nome: "
print" Voce Digitou ",var
-- ERROR:
File "XXXX", line 1
    var  = input "Digite o nome: "
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:04:14) 
-- CODE:
var  = input ("Digite o nome: ")
print" Voce Digitou ",var
-- ERROR:
File "XXXX", line 2
    print" Voce Digitou ",var
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:04:39) 
-- CODE:
var  = input ("Digite o nome: ")
print(" Voce Digitou ",var)
-- OUTPUT:
Voce Digitou  Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:05:20) 
-- CODE:
var  = input ("Digite o nome: ")
print("Pyton",var)
-- EXECUTION TIME:
0.157641
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Pyton Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Pyton Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:05:21) 
-- CODE:
var  = input ("Digite o nome: ")
print("Pyton",var)
-- OUTPUT:
Pyton Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:05:39) 
-- CODE:
var  = input ("Digite o nome: ")
print("",var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:05:43) 
-- CODE:
var  = input ("Digite o nome: ")
print("",var)
-- EXECUTION TIME:
0.238585
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
